Fixing timecode issue, stretched image issue, and adding fullscreen button call

--- a/src/views/Broadcast/broadcast.css
+++ b/src/views/Broadcast/broadcast.css
@@ -1,4 +1,4 @@
-.profileImage {
+.profile-image {
   background: #d8d8d8;
-  object-fit: fill !important;
+  object-fit: fill;
 }
